--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -951,7 +951,7 @@
         <!-- Video 3 -->
         <div class="video-card">
           <div class="video-thumbnail">
-            <img src="../images/video-thumb3.jpg" alt="Parent support">
+            <img src="../images/Parent Support.jpg" alt="Parent support">
             <div class="play-icon">
               <i class="fas fa-play"></i>
             </div>
